# computer_network

./: .gitignore
HighLoadServerC/: CMakeLists.txt
HighLoadServerC/src/: client.c  main.c  proto.c  proto.h  server.c  socket.c  (+5 more)
lab1/: .gitignore  README.md
lab1/HighLoadServerC/: CMakeLists.txt
lab1/HighLoadServerC/src/: proto.c  socket.h  tcp_client.c  tcp_server.h
lab2/: CMakeLists.txt  FINAL_REPORT.md  README.md  build.bat  test_file.c
lab2/src/: file_handler.c  file_handler.h  http_parser.c  http_parser.h  http_server.c  http_server.h  main.c  mime_types.c  mime_types.h  socket.c  socket.h  thread_pool.c  thread_pool.h
lab2/www/: 404.html  about.html  contact.html  index.html  style.css
lab3/: INSTRUCTIONS_RU.md  Makefile  Makefile.openssl  Makefile.simple  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE_RU.md  build.sh  mime_utils.c  mime_utils.h  smtp_client  smtp_client.c  smtp_utils.c  smtp_utils.h  test_client.sh  test_email.sh  test_tls_support.sh  tls_utils.c  tls_utils.h
lab4/: TC_FLAG_DESIGN.md  dns_cache.c  dns_cache.h  dns_packet.c  dns_packet.h  dns_resolver  dns_resolver.c  dns_resolver_single  main.c  net_tcp.c  net_tcp.h  net_udp.c  net_udp.h  resolver.c  resolver.h  util.c  util.h
lab5/: GBN_SR_REPORT.md  Makefile  RDTP_DESIGN.md  README.md  demo_1mb.txt  out_sr_demo.txt  rdt_common.c  rdt_common.h  rdt_receiver  rdt_receiver.c  rdt_sender  rdt_sender.c
lab6/: Makefile  README.md  REPORT.md  udp_pinger_client  udp_pinger_client.c  udp_pinger_server  udp_pinger_server.c
lab7/: Makefile  README.md  REPORT.md  proxy_server  proxy_server.c
(+12 files in other folders)
